tests/NormalTests/paczka1/fuzzy1/65560211.err
Error in line 12: WMEpmQMqF A95 33,76
Error in line 2: slPo S226 55,6
Error in line 9: DSU A83 50,0
Error in line 16: WMEpmQMqF A95 134,4
Error in line 32: lCtJh6xGdzc A95 30,5
Error in line 35: lCtJh6xGdzc A83 82,1
